--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -40,5 +40,7 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/admin, roles: ROLE_USER}
+        - { path: ^/user/favourite, roles: ROLE_USER}
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY}
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY}
+
