--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -43,4 +43,5 @@ security:
         - { path: ^/user/favourite, roles: ROLE_USER}
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY}
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY}
+        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY}
 
