--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -20,6 +20,7 @@ security:
             security: false
         main:
             anonymous: lazy
+            access_denied_handler: App\Security\AccessDeniedHandler
             provider: app_user_provider
             guard:
                 authenticators:
